nivasa-macros/tests/trybuild/controller_set_metadata_missing_value.stderr
error: `#[set_metadata]` requires a `value` entry
 --> tests/trybuild/controller_set_metadata_missing_value.rs:3:1
  |
3 | #[set_metadata(key = "scope")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `set_metadata` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `controller`
 --> tests/trybuild/controller_set_metadata_missing_value.rs:1:21
  |
1 | use nivasa_macros::{controller, set_metadata};
  |                     ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
