nivasa-macros/tests/trybuild/controller_set_metadata_missing_value.rs
use nivasa_macros::{controller, set_metadata};

#[set_metadata(key = "scope")]
#[controller("/users")]
struct UsersController;

fn main() {}
